--- a/css/master.css
+++ b/css/master.css
@@ -11,19 +11,25 @@ header {
   flex-flow: row wrap;
   max-width: 1600px;
   min-width: 720px;
-  white-space: nowrap;
   height: 700px;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
 }
 
 .thumb {
-  width: 10%;
+  flex: 1;
   transition: all .2s ease-in-out;
 }
+.inner {
+  position: relative;
+}
+#giraffe:hover, #cow:hover, #human:hover, #chipanzee:hover, #dog:hover, #rabbit:hover, #cat:hover, #tiger:hover, #koala:hover {
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
 
-.thumb:hover {
-  width: 20%;
+.selected {
+  flex: 5;
+  background-image: url();
 }
 
 .inner {
@@ -34,38 +40,86 @@ header {
   overflow: hidden;
 }
 
+
 #giraffe {
-  background-image: url("../images/giraffe2.jpg");
+  background-image: url("../images/giraffe_sleeping.jpg");
+}
+.selected #giraffe {
+  background-image: url("../images/giraffe_awake.jpg")
 }
 
 #cow {
-  background-image: url("../images/cow2.jpg");
+  background-image: url("../images/cow_sleeping.jpg");
+}
+
+.selected #cow {
+  background-image: url("../images/cow_awake.jpg")
 }
 
 #human {
-  background-image: url("../images/human2.jpg");
+  background-image: url("../images/human_sleeping.jpg");
+}
+
+.selected  #human {
+  background-image: url("../images/human_awake.jpeg")
 }
 
 #chipanzee {
-  background-image: url("../images/chipanzee2.jpg");
+  background-image: url("../images/chipanzee_sleeping.jpg");
+}
+
+.selected #chipanzee {
+  background-image: url("../images/chipanzee_awake.jpeg")
 }
 
 #rabbit {
-  background-image: url("../images/rabbit2.jpeg")  ;
+  background-image: url("../images/rabbit_sleeping.jpeg")  ;
+}
+
+.selected #rabbit {
+  background-image: url("../images/rabbit_awake.jpg")
 }
 
 #dog {
-  background-image: url("../images/dog2.jpg");
+  background-image: url("../images/dog_sleeping.jpg");
+}
+
+.selected #dog {
+  background-image: url("../images/dog_awake.jpeg")
 }
 
 #cat {
-  background-image: url("../images/cat2.jpg");
+  background-image: url("../images/cat_sleeping.jpg");
+}
+
+.selected #cat{
+  background-image: url("../images/cat_awake.jpg")
 }
 
 #tiger {
-  background-image: url("../images/tiger2.jpg");
+  background-image: url("../images/tiger_sleeping.jpg");
+}
+
+.selected #tiger {
+  background-image: url("../images/tiger_awake.jpeg")
 }
 
 #koala {
-  background-image: url("../images/koala2.jpg");
+  background-image: url("../images/koala_sleeping.jpg");
+}
+
+.selected #koala {
+  background-image: url("../images/koala_awake.jpg")
+}
+
+.textbox {
+  display: none;
+}
+
+.selected .textbox {
+ display: block;
+ background-color: red;
+ text-align: center;
+ border-radius: 10px;
+ box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
