--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Libre Baskerville', serif;
   transition: background-color .5s ease-in-out;
 }
 header {
