--- a/css/progressbar.css
+++ b/css/progressbar.css
@@ -17,7 +17,7 @@
   box-sizing: border-box;
   height: 100%;
   width: 200%;
-  border: 10px solid black;
+  border: 20px solid white;
   border-radius: 100%;
 }
 
