--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ footer p {
   z-index: 2;
 }
 
-body.thumbSelected .thumb {
+body.thumbSelected .thumb:not(.selected) {
   width: 0;
   height: 0;
 }
@@ -73,7 +73,8 @@ body.thumbSelected .scrim {
 }
 
 .textbox {
-  font-family: 18px Baskerville, serif;
+  font-family: Baskerville, serif;
+  font-size: 20px;
   color: #fff;
   opacity: 0;
   position: absolute;
@@ -118,6 +119,7 @@ body.thumbSelected img {
   right: 70px;
   top: 50%;
   color: white;
+  transition: opacity .2s ease-in-out .75s;
 }
 
 #left {
@@ -125,6 +127,7 @@ body.thumbSelected img {
   top: 50%;
   left: 70px;
   color: white;
+  transition: opacity .2s ease-in-out .75s;
 }
 
 #giraffe {
