--- a/css/main.css
+++ b/css/main.css
@@ -90,18 +90,10 @@ body.thumbSelected .scrim {
 }
 
 .control {
-  z-index: 10;
-}
-
-img {
-  width: 40px;
-  height: 40px;
-  background-color: transparent;
   display: none;
-  z-index: 10;
 }
 
-body.thumbSelected img {
+body.thumbSelected .control {
   display: block;
   z-index: 3;
 }
