--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 html, body {
   height: 100%;
   margin: 0;
+  font-family: baskerville, serif;
 }
 
 #wrapper{
@@ -16,13 +17,11 @@ footer {
   margin-top: -5px;
 }
 footer h2 {
-  font-family:  baskerville;
   font-weight: bold;
   font-size: 24px;
   color: #000;
 }
 footer p {
-  font-family: baskerville;
   font-weight: 200;
   font-size: 18px;
   color: #a9a9a9;
@@ -73,7 +72,6 @@ body.thumbSelected .scrim {
 }
 
 .textbox {
-  font-family: Baskerville, serif;
   font-size: 20px;
   color: #fff;
   opacity: 0;
